--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,17 @@
   <div
     class="mb-4 grid justify-items-center gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4"
   >
-    @for (product of products(); track $index) {
+    @for (product of currentProducts(); track $index) {
     <shared-product-card [product]="product"></shared-product-card>
     }
   </div>
+
+  <shared-paginator
+    [currentPage]="currentPage()"
+    [totalPages]="totalPages()"
+    (previousPage)="handlePreviousPage()"
+    (nextPage)="handleNextPage()"
+  ></shared-paginator>
 </main>
 
 <router-outlet />
