Add sidebar and navbar components to the dashboard, and implement home page layout

--- a/src/app/dashboard/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard/pages/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,9 @@
-<p>dashboard-page works!</p>
+<dashboard-navbar></dashboard-navbar>
+<dashboard-sidebar></dashboard-sidebar>
+
+<div class="p-4 sm:ml-64">
+  <div class="mt-14 p-4">
+    <h1>Dashboard</h1>
+  </div>
+</div>
+
