Add loader component and integrate ApexCharts for data visualization in dashboard

--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -46,8 +46,8 @@
               <span class="sr-only">Abrir menú del usuario</span>
               <img
                 class="w-8 h-8 rounded-full"
-                src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
-                alt="user photo"
+                [src]="(user$ | async)?.picture"
+                [alt]="(user$ | async)?.nickname"
               />
             </button>
           </div>
