--- a/src/app/dashboard/pages/products-page/products-page.component.html
+++ b/src/app/dashboard/pages/products-page/products-page.component.html
@@ -13,5 +13,6 @@
   [products]="products()"
   [categories]="categories()"
   (deleteProduct)="handleDeleteProduct($event)"
+  (updateProduct)="handleUpdateProduct($event)"
 ></dashboard-table>
 }
