--- a/src/app/shared/pages/home-page/home-page.component.html
+++ b/src/app/shared/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<shared-header></shared-header>
+<shared-header [categories]="categories()"></shared-header>
 <main class="mx-auto max-w-screen-xl mt-20 px-4 py-8 md:py-12 2xl:px-0">
   @if (products().length === 0) {
   <shared-loader></shared-loader>
