--- a/src/app/dashboard/components/update-product-form/update-product-form.component.html
+++ b/src/app/dashboard/components/update-product-form/update-product-form.component.html
@@ -59,7 +59,7 @@
         htmlFor="description"
         class="block mb-2 text-sm font-medium text-gray-900"
       >
-        Decripción
+        Descripción
       </label>
       <textarea
         id="description"
