Add authentication guard to dashboard routes and improve navbar dropdown accessibility

--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -38,10 +38,9 @@
         <div class="flex items-center ms-3">
           <div>
             <button
-              type="button"
               class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300"
-              aria-expanded="false"
-              data-dropdown-toggle="dropdown-user"
+              popovertarget="dropdown-user"
+              popovertargetaction="toggle"
             >
               <span class="sr-only">Abrir menú del usuario</span>
               <img
@@ -52,8 +51,9 @@
             </button>
           </div>
           <div
-            class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow"
+            class="top-12 right-4 my-4 me-0 text-base list-none bg-white divide-y divide-gray-100 rounded shadow"
             id="dropdown-user"
+            popover
           >
             <div class="px-4 py-3" role="none">
               <p class="text-sm text-gray-900" role="none">
@@ -75,7 +75,7 @@
               <li>
                 <button
                   href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                  class="block w-full px-4 py-2 text-start text-sm text-gray-700 hover:bg-gray-100"
                   role="menuitem"
                   (click)="
                     auth.logout({
